Integrate gestion-produit into main

--- a/templates/admin/produit/index.html.twig
+++ b/templates/admin/produit/index.html.twig
@@ -92,6 +92,9 @@
                 </tbody>
             </table>
         </div>
+        <div class="px-4 py-3 border-top d-flex justify-content-center">
+            {{ knp_pagination_render(produits) }}
+        </div>
     </div>
 </div>
 {% endblock %}
