--- a/templates/front/products/marketplace.html.twig
+++ b/templates/front/products/marketplace.html.twig
@@ -254,5 +254,9 @@
             </div>
         {% endfor %}
     </div>
+    
+    <div class="d-flex justify-content-center mt-5 mb-5">
+        {{ knp_pagination_render(produits) }}
+    </div>
 </div>
 {% endblock %}
