--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -209,6 +209,8 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
+    {% include 'components/chatbot.html.twig' %}
+    
     {% block javascripts %}{% endblock %}
 </body>
 </html>
